--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,5 +1,5 @@
 <div layout:decorator="layout">
     <th:block layout:fragment="layout-content">
-		<div class="alert alert-danger">404-ページが見つかりません。</div>
+		<div class="alert alert-danger">エラーが発生しました。</div>
 	</th:block>
 </div>
