--- a/src/main/resources/templates/question/home.html
+++ b/src/main/resources/templates/question/home.html
@@ -1,30 +1,21 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-<title>ONE-Q</title>
-<style>
-body {
-  padding-top: 100px;
-}
-.starter-template {
-  padding: 40px 15px;
-  text-align: center;
-}
-</style>
-</head>
-<body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">ONE-Q</a>
-        </div>
-    </div>
-</nav>
-<div class="container">
-<h1><a th:href="${url}" th:text="${url}"></a></h1>
+<div layout:decorator="layout">
+    <th:block layout:fragment="layout-content">
+		<h1><a th:href="${url}" th:text="${url}"></a></h1>
+		<h1><a th:href="@{/question/edit}">質問を編集する</a></h1>
+		
+		<table class="table">
+			<thead>
+				<tr>
+					<th>選択肢</th>
+					<th>回答数</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="summary : ${summaryList}">
+					<td th:text="${summary.choice}"></td>
+					<td th:text="${summary.count}"></td>
+				</tr>
+			</tbody>
+		</table>
+	</th:block>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</body>
-</html>
